@@ -22,13 +22,13 @@ import io.ballerina.persist.BalException;
 import io.ballerina.persist.PersistToolsConstants;
 import io.ballerina.persist.models.Entity;
 import io.ballerina.persist.models.EntityField;
-import io.ballerina.persist.models.FieldMetadata;
 import io.ballerina.persist.models.ForeignKey;
+import io.ballerina.persist.models.MigrationDataHolder;
 import io.ballerina.persist.models.Module;
+import io.ballerina.persist.models.Relation;
 import io.ballerina.persist.nodegenerator.SourceGenerator;
 import io.ballerina.persist.nodegenerator.syntax.constants.BalSyntaxConstants;
 import io.ballerina.persist.nodegenerator.syntax.utils.SqlScriptUtils;
-import io.ballerina.persist.nodegenerator.syntax.utils.TomlSyntaxUtils;
 import io.ballerina.persist.utils.BalProjectUtils;
 import picocli.CommandLine;
 
@@ -52,7 +52,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Stream;
 
 /**
@@ -73,6 +74,8 @@ public class Migrate implements BLauncherCmd {
 
     @CommandLine.Parameters
     public List<String> argList;
+    @CommandLine.Option(names = {"--datastore"})
+    private String datastore = "mysql";
 
     public Migrate() {
         this("");
@@ -104,17 +107,8 @@ public class Migrate implements BLauncherCmd {
             return;
         }
 
-        try {
-            HashMap<String, String> ballerinaTomlConfig = TomlSyntaxUtils.readBallerinaTomlConfig(
-                    Paths.get(this.sourcePath, "Ballerina.toml"));
-            String dataStore = ballerinaTomlConfig.get("options.datastore").trim();
-            if (!dataStore.equals(PersistToolsConstants.SupportedDataSources.MYSQL_DB)) {
-                errStream.printf("ERROR: unsupported data store: expected: 'mysql' but found: '%s'%n", dataStore);
-                return;
-            }
-        } catch (BalException e) {
-            errStream.printf("ERROR: failed to locate Ballerina.toml: %s%n",
-                    e.getMessage());
+        if (!Objects.equals(datastore, PersistToolsConstants.SupportedDataSources.MYSQL_DB)) {
+            errStream.println("Error: invalid datastore: " + datastore + ". currently only MySQL is supported.");
             return;
         }
 
@@ -165,7 +159,7 @@ public class Migrate implements BLauncherCmd {
                     return;
                 }
 
-                Module model = null;
+                Module model;
                 try {
                     model = BalProjectUtils.getEntities(schemaFilePath);
                 } catch (BalException e) {
@@ -201,15 +195,16 @@ public class Migrate implements BLauncherCmd {
                     //Get the relative path of the migration directory from the project root
                     Path relativePath = Paths.get("").toAbsolutePath().relativize(newMigrationPath);
 
-                    errStream.println(System.lineSeparator() + "Detailed list of differences: ");
-                    errStream.println("[Entity " + String.join(", ", model.getEntityMap().keySet())
-                            + " has been added]" + System.lineSeparator());
+                    List<String> differences = new ArrayList<>();
+                    differences.add("Table " + String.join(", ", model.getEntityMap().keySet())
+                            + " has been added");
+                    printDetailedListOfDifferences(differences);
                     errStream.println(
-                            "Generated migration script to " + relativePath.toString() + 
+                            "Generated migration script to " + relativePath +
                             " directory." + System.lineSeparator());
                     errStream.println("Next steps:" + System.lineSeparator() + 
                             "Execute the \"script.sql\" file located at " +
-                            relativePath.toString() +
+                            relativePath +
                             " directory in your database to migrate the schema with the latest changes.");
                 } else {
                     errStream.println("ERROR: Could not find any entities in the schema file");
@@ -232,7 +227,7 @@ public class Migrate implements BLauncherCmd {
             try (Stream<Path> directoryStream = Files.list(folderPath)) {
                 List<Path> directories = directoryStream
                         .filter(Files::isDirectory)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 for (Path directory : directories) {
                     Path fileName = directory.getFileName();
@@ -301,6 +296,7 @@ public class Migrate implements BLauncherCmd {
 
     private static void migrateWithTimestamp(File migrationsDir, String migrationName, Path currentModelPath,
             Path previousModelPath) {
+
         List<String> queries;
 
         String newMigration = createTimestampFolder(migrationName, migrationsDir);
@@ -339,10 +335,10 @@ public class Migrate implements BLauncherCmd {
                 Path relativePath = Paths.get("").toAbsolutePath().relativize(newMigrationPath);
 
                 errStream.println(
-                        "Generated migration script to " + relativePath.toString() + 
+                        "Generated migration script to " + relativePath +
                         " directory." + System.lineSeparator());
                 errStream.println("Next steps:" + System.lineSeparator() + "Execute the \"script.sql\" file located at "
-                        + relativePath.toString() +
+                        + relativePath +
                         " directory in your database to migrate the schema with the latest changes.");
             }
 
@@ -357,7 +353,6 @@ public class Migrate implements BLauncherCmd {
                 Files.copy(currentModelPath, newMigrationPath.resolve(currentModelPath.getFileName()));
             } catch (IOException e) {
                 errStream.println("Error: Copying file failed: " + e.getMessage());
-                return;
             }
         } else {
             // Delete the newMigrateDirectory
@@ -376,7 +371,6 @@ public class Migrate implements BLauncherCmd {
                         Files.delete(migrationsDir.toPath());
                     } catch (IOException e) {
                         errStream.println("Error: Failed to delete migration folder: " + e.getMessage());
-                        return;
                     }
                 }
             }
@@ -389,9 +383,7 @@ public class Migrate implements BLauncherCmd {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
         String timestamp = formatter.format(ZonedDateTime.ofInstant(currentTime, ZoneOffset.UTC));
 
-        String newMigration = migrationsDir + File.separator + timestamp + "_" + migrationName;
-
-        return newMigration;
+        return migrationsDir + File.separator + timestamp + "_" + migrationName;
     }
 
     // Create the timestamp directory
@@ -423,68 +415,84 @@ public class Migrate implements BLauncherCmd {
     }
 
     private static List<String> findDifferences(Module previousModel, Module currentModel) {
+
         List<String> queries = new ArrayList<>();
-        List<String> differences = new ArrayList<>();
-
-        List<String> addedEntities = new ArrayList<>();
-        List<String> removedEntities = new ArrayList<>();
-        HashMap<String, List<FieldMetadata>> addedFields = new HashMap<>();
-        HashMap<String, List<String>> removedFields = new HashMap<>();
-        HashMap<String, List<FieldMetadata>> changedFieldTypes = new HashMap<>();
-        HashMap<String, List<FieldMetadata>> addedReadOnly = new HashMap<>();
-        HashMap<String, List<String>> removedReadOnly = new HashMap<>();
-        HashMap<String, List<ForeignKey>> addedForeignKeys = new HashMap<>();
-        HashMap<String, List<String>> removedForeignKeys = new HashMap<>();
-
+        MigrationDataHolder migrationDataHolder = new MigrationDataHolder();
         // Compare entities in previousModel and currentModel
         for (Entity previousModelEntity : previousModel.getEntityMap().values()) {
             Entity currentModelEntity = currentModel.getEntityMap().get(previousModelEntity.getEntityName());
 
             // Check if currentModelEntity exists
             if (currentModelEntity == null) {
-                differences.add("Entity " + previousModelEntity.getEntityName() + " has been removed");
-                removedEntities.add(previousModelEntity.getEntityName());
+                migrationDataHolder.removeTable(previousModelEntity.getTableName());
                 continue;
+            }
+
+            // Check if their table names are changed (through annotations)
+            if (!Objects.equals(currentModelEntity.getTableName(), previousModelEntity.getTableName())) {
+                migrationDataHolder.renameTable(previousModelEntity.getTableName(), currentModelEntity.getTableName());
+            }
+
+            // Check if the primary key fields has been removed
+            if (previousModelEntity.getKeys().size() > currentModelEntity.getKeys().size()) {
+                migrationDataHolder.changePrimaryKey(currentModelEntity.getTableName());
             }
 
             // Compare fields in previousModelEntity and currentModelEntity
             for (EntityField previousModelField : previousModelEntity.getFields()) {
-                EntityField currentModelField = currentModelEntity.getFieldByName(previousModelField.getFieldName());
+                EntityField currentModelField = currentModelEntity
+                        .getFieldByName(previousModelField.getFieldName());
 
                 // Check if currentModelField exists and if foreign key was removed
                 if (currentModelField == null) {
                     if (previousModelField.getRelation() == null) {
-                        differences.add("Field " + previousModelField.getFieldName() +
-                                " has been removed from entity " + previousModelEntity.getEntityName());
-                        addToMapNoTypeString(previousModelEntity, previousModelField, removedFields);
+                        migrationDataHolder.removeColumn(previousModelEntity.getTableName(),
+                                previousModelField.getFieldColumnName());
                     } else if (previousModelField.getRelation().isOwner()) {
-                        differences.add("Foreign key " + previousModelField.getFieldName() +
-                                " has been removed from entity " + previousModelEntity.getEntityName());
-                        addToMapRemoveForeignKey(previousModelEntity, previousModelField, removedForeignKeys);
+                        migrationDataHolder.removeForeignKey(previousModelEntity.getTableName(), previousModelField);
                     }
                     continue;
                 }
 
+                // Check if the field names are changed (through annotations)
+                if (!Objects.equals(currentModelField.getFieldColumnName(), previousModelField.getFieldColumnName())) {
+                    migrationDataHolder.renameColumn(currentModelEntity.getTableName(),
+                            previousModelField.getFieldColumnName(), currentModelField.getFieldColumnName());
+                }
+
+                if (currentModelField.getRelation() != null &&
+                        previousModelField.getRelation() != null &&
+                        currentModelField.getRelation().isOwner() &&
+                        !Objects.equals(currentModelField.getRelation().getKeyColumns(),
+                                previousModelField.getRelation().getKeyColumns())) {
+
+                    if (isOnlyColumnsRenamed(previousModelField.getRelation().getKeyColumns(),
+                            currentModelField.getRelation().getKeyColumns())) {
+                        for (int i = 0; i < previousModelField.getRelation().getKeyColumns().size(); i++) {
+                            migrationDataHolder.renameColumn(currentModelEntity.getTableName(),
+                                    previousModelField.getRelation().getKeyColumns().get(i).getColumnName(),
+                                    currentModelField.getRelation().getKeyColumns().get(i).getColumnName());
+                        }
+                    } else {
+                        migrationDataHolder.recreateForeignKey(currentModelEntity.getTableName(), previousModelField,
+                                currentModelField);
+                    }
+                }
+
                 // Compare data types
-                if (!previousModelField.getFieldType().equals(currentModelField.getFieldType())) {
-                    differences.add("Data type of field " + previousModelField.getFieldName() +
-                            " in entity " + previousModelEntity.getEntityName() + " has changed from " +
-                            previousModelField.getFieldType() + " to " + currentModelField.getFieldType());
-                    addToMapWithType(previousModelEntity, currentModelField, changedFieldTypes);
+                if (!previousModelField.getFieldType().equals(currentModelField.getFieldType()) ||
+                        !Objects.equals(previousModelField.getSqlType(), currentModelField.getSqlType()) ||
+                        !Objects.equals(previousModelField.isOptionalType(), currentModelField.isOptionalType()) ||
+                        !Objects.equals(previousModelField.isDbGenerated(), currentModelField.isDbGenerated())
+                ) {
+                    migrationDataHolder.modifyColumn(currentModelEntity.getTableName(), previousModelField,
+                            currentModelField);
                 }
 
                 // Compare readonly fields
-                if (previousModelEntity.getKeys().contains(previousModelField)
-                        && !currentModelEntity.getKeys().contains(currentModelField)) {
-                    differences.add("Field " + previousModelField.getFieldName() + " in entity " +
-                            previousModelEntity.getEntityName() + " is no longer a readonly field");
-                    addToMapNoTypeString(previousModelEntity, previousModelField, removedReadOnly);
-
-                } else if (!previousModelEntity.getKeys().contains(previousModelField)
+                if (!previousModelEntity.getKeys().contains(previousModelField)
                         && currentModelEntity.getKeys().contains(currentModelField)) {
-                    differences.add("Field " + previousModelField.getFieldName() + " in entity " +
-                            previousModelEntity.getEntityName() + " is now a readonly field");
-                    addToMapNoTypeObject(previousModelEntity, currentModelField, addedReadOnly);
+                    migrationDataHolder.changePrimaryKey(currentModelEntity.getTableName());
                 }
 
             }
@@ -495,28 +503,10 @@ public class Migrate implements BLauncherCmd {
 
                 if (previousModelField == null) {
                     if (currentModelField.getRelation() == null) {
-                        if (currentModelEntity.getKeys().contains(currentModelField)) {
-                            differences.add("Field " + currentModelField.getFieldName() + " of type " +
-                                    currentModelField.getFieldType() + " has been added to entity " +
-                                    currentModelEntity.getEntityName() + " as a readonly field");
-                            addToMapNoTypeObject(currentModelEntity, currentModelField, addedReadOnly);
-                        } else {
-                            differences.add("Field " + currentModelField.getFieldName() + " of type " +
-                                    currentModelField.getFieldType() + " has been added to entity " +
-                                    currentModelEntity.getEntityName());
-                        }
-                        addToMapWithType(currentModelEntity, currentModelField, addedFields);
+                        migrationDataHolder.addColumn(currentModelEntity.getTableName(), currentModelField,
+                                currentModelEntity.getKeys().contains(currentModelField));
                     } else if (currentModelField.getRelation().isOwner()) {
-                        differences.add("Field " + currentModelField.getRelation().getKeyColumns().get(0).getField() +
-                                " of type " + currentModelField.getRelation().getKeyColumns().get(0).getType() +
-                                " has been added to entity " + currentModelEntity.getEntityName()
-                                + " as a foreign key");
-                        addToMapNewEntityFK(currentModelEntity, currentModelField, addedFields);
-
-                        differences.add("Foreign key " + currentModelField.getFieldName() + " of type " +
-                                currentModelField.getFieldType() + " has been added to entity " +
-                                currentModelEntity.getEntityName());
-                        addToMapAddForeignKey(currentModelEntity, currentModelField, addedForeignKeys);
+                        migrationDataHolder.createForeignKeys(currentModelEntity.getTableName(), currentModelField);
                     }
                 }
             }
@@ -524,358 +514,208 @@ public class Migrate implements BLauncherCmd {
 
         // Check for added entities
         for (Entity currentModelEntity : currentModel.getEntityMap().values()) {
-            Entity previousModelEntity = previousModel.getEntityMap().get(currentModelEntity.getEntityName());
-
-            if (previousModelEntity == null) {
-                differences.add("Entity " + currentModelEntity.getEntityName() + " has been added");
-                addedEntities.add(currentModelEntity.getEntityName());
-                for (EntityField field : currentModelEntity.getFields()) {
-                    if (field.getRelation() == null) {
-                        if (currentModelEntity.getKeys().contains(field)) {
-                            differences.add("Field " + field.getFieldName() + " of type " +
-                                    field.getFieldType() + " has been added to entity " +
-                                    currentModelEntity.getEntityName() + " as a readonly field");
-                            addToMapWithType(currentModelEntity, field, addedReadOnly);
-
-                        } else {
-                            differences.add("Field " + field.getFieldName() + " of type " +
-                                    field.getFieldType() + " has been added to entity " +
-                                    currentModelEntity.getEntityName());
-                            addToMapWithType(currentModelEntity, field, addedFields);
-                        }
-                    } else if (field.getRelation().isOwner()) {
-                        differences.add("Field " + field.getRelation().getKeyColumns().get(0).getField() +
-                                " of type " + field.getRelation().getKeyColumns().get(0).getType() +
-                                " has been added to entity " + currentModelEntity.getEntityName()
-                                + " as a foreign key");
-                        addToMapNewEntityFK(currentModelEntity, field, addedFields);
-
-                        differences.add("Foreign key " + field.getFieldName() + " of type " +
-                                field.getFieldType() + " has been added to entity "
-                                + currentModelEntity.getEntityName());
-                        addToMapAddForeignKey(currentModelEntity, field, addedForeignKeys);
-                    }
-                }
+            Entity previousModelEntity = previousModel.getEntityMap().get(currentModelEntity.getTableName());
+            if (previousModelEntity == null &&
+                    !migrationDataHolder.isEntityRenamed(currentModelEntity.getTableName())) {
+                migrationDataHolder.addTable(currentModelEntity.getTableName());
             }
         }
 
         // Convert differences to queries (ordered)
-        convertCreateTableToQuery(QueryTypes.ADD_TABLE, addedEntities, queries, addedReadOnly, addedFields);
-        convertMapToQuery(QueryTypes.ADD_FIELD, addedFields, queries, addedEntities);
-        convertMapListToQuery(QueryTypes.REMOVE_FOREIGN_KEY, removedForeignKeys, queries);
-        convertMapListToQuery(QueryTypes.REMOVE_READONLY, removedReadOnly, queries);
-        convertMapToQuery(QueryTypes.ADD_READONLY, addedReadOnly, queries, addedEntities);
-        convertFKMapToQuery(QueryTypes.ADD_FOREIGN_KEY, addedForeignKeys, queries);
-        convertMapListToQuery(QueryTypes.REMOVE_FIELD, removedFields, queries);
-        convertListToQuery(QueryTypes.REMOVE_TABLE, removedEntities, queries);
-        convertMapToQuery(QueryTypes.CHANGE_TYPE, changedFieldTypes, queries, addedEntities);
+        addDropTableQueries(migrationDataHolder.getRemovedEntities(), queries);
+        addDropForeignKeyQueries(migrationDataHolder.getRemovedForeignKeys(), queries);
+        addDropPrimaryKeyQueries(migrationDataHolder.getPrimaryKeyChangedEntities(),
+                migrationDataHolder.getAddedEntities(), queries);
+        addDropColumnQueries(migrationDataHolder.getRemovedFields(), queries);
+        addCreateTableQueries(migrationDataHolder.getAddedEntities(), currentModel, queries);
+        addRenameTableQueries(migrationDataHolder.getRenamedEntities(), queries);
+        addRenameFieldQueries(migrationDataHolder.getRenamedFields(), queries);
+        addCreateFieldQueries(migrationDataHolder.getAddedFields(), queries);
+        addCreatePrimaryKeyQueries(migrationDataHolder.getPrimaryKeyChangedEntities(),
+                migrationDataHolder.getAddedEntities(), currentModel, queries);
+        addCreateForeignKeyQueries(migrationDataHolder.getAddedForeignKeys(), queries);
+        addModifyColumnTypeQueries(migrationDataHolder.getChangedFieldTypes(), queries);
 
-        errStream.println(System.lineSeparator() + "Detailed list of differences: ");
-        if (!differences.isEmpty()) {
-            errStream.println(differences + System.lineSeparator());
-        } else {
-            errStream.println("[No differences found]" + System.lineSeparator());
-        }
+        printDetailedListOfDifferences(migrationDataHolder.getDifferences());
 
         return queries;
     }
 
-    private static void addToMapAddForeignKey(Entity entity, EntityField field, Map<String, List<ForeignKey>> map) {
-        String addKeyName = String.format("FK_%s_%s", entity.getEntityName(),
-                field.getRelation().getAssocEntity().getEntityName());
-        ForeignKey foreignKey = new ForeignKey(addKeyName, field.getRelation().getKeyColumns().get(0).getField(),
-                field.getRelation().getAssocEntity().getEntityName(),
-                field.getRelation().getKeyColumns().get(0).getReference());
+    private static boolean isOnlyColumnsRenamed(List<Relation.Key> previousKeys, List<Relation.Key> currentKeys) {
+        if (!Objects.equals(previousKeys.size(), currentKeys.size())) {
+            return false;
+        }
+        for (int i = 0; i < previousKeys.size(); i++) {
+            if (!previousKeys.get(i).isOnlyColumnRenamed(currentKeys.get(i))) {
+                return false;
+            }
+        }
+        return true;
+    }
 
-        if (!map.containsKey(entity.getEntityName())) {
-            List<ForeignKey> initialData = new ArrayList<>();
-            initialData.add(foreignKey);
-            map.put(entity.getEntityName(), initialData);
+
+    private static void printDetailedListOfDifferences(List<String> differences) {
+        errStream.println(System.lineSeparator() + "Detailed list of differences: ");
+        if (!differences.isEmpty()) {
+            differences.forEach(difference -> errStream.println("-- " + difference));
+            errStream.println();
         } else {
-            List<ForeignKey> existingData = map.get(entity.getEntityName());
-            existingData.add(foreignKey);
-            map.put(entity.getEntityName(), existingData);
+            errStream.println("-- No differences found" + System.lineSeparator());
         }
     }
 
-    private static void addToMapRemoveForeignKey(Entity entity, EntityField field, Map<String, List<String>> map) {
-        String removeKeyName = String.format("FK_%s_%s", entity.getEntityName(),
-                field.getRelation().getAssocEntity().getEntityName());
-
-        if (!map.containsKey(entity.getEntityName())) {
-            List<String> initialData = new ArrayList<>();
-            initialData.add(removeKeyName);
-            map.put(entity.getEntityName(), initialData);
-        } else {
-            List<String> existingData = map.get(entity.getEntityName());
-            existingData.add(removeKeyName);
-            map.put(entity.getEntityName(), existingData);
+    private static void addRenameFieldQueries(HashMap<String, List<MigrationDataHolder.NameMapping>> renamedFields,
+                                              List<String> queries) {
+        String renameFieldTemplate = "ALTER TABLE %s%nRENAME COLUMN %s TO %s;%n";
+        for (Map.Entry<String, List<MigrationDataHolder.NameMapping>> entry : renamedFields.entrySet()) {
+            for (MigrationDataHolder.NameMapping nameMapping : entry.getValue()) {
+                queries.add(String.format(renameFieldTemplate, entry.getKey(), nameMapping.oldName(),
+                        nameMapping.newName()));
+            }
         }
     }
 
-    private static void addToMapNoTypeString(Entity entity, EntityField field, Map<String, List<String>> map) {
-        if (!map.containsKey(entity.getEntityName())) {
-            List<String> initialData = new ArrayList<>();
-            initialData.add(field.getFieldName());
-            map.put(entity.getEntityName(), initialData);
-        } else {
-            List<String> existingData = map.get(entity.getEntityName());
-            existingData.add(field.getFieldName());
-            map.put(entity.getEntityName(), existingData);
+    private static void addRenameTableQueries(List<MigrationDataHolder.NameMapping> renamedEntities,
+                                              List<String> queries) {
+        String renameTableTemplate = "RENAME TABLE %s TO %s;%n";
+        for (MigrationDataHolder.NameMapping nameMapping : renamedEntities) {
+            queries.add(String.format(renameTableTemplate, nameMapping.oldName(), nameMapping.newName()));
         }
     }
 
-    private static void addToMapNoTypeObject(Entity entity, EntityField field, Map<String, List<FieldMetadata>> map) {
-        FieldMetadata fieldMetadata = new FieldMetadata(field.getFieldName());
-
-        if (!map.containsKey(entity.getEntityName())) {
-            List<FieldMetadata> initialData = new ArrayList<>();
-            initialData.add(fieldMetadata);
-            map.put(entity.getEntityName(), initialData);
-        } else {
-            List<FieldMetadata> existingData = map.get(entity.getEntityName());
-            existingData.add(fieldMetadata);
-            map.put(entity.getEntityName(), existingData);
+    private static void addCreatePrimaryKeyQueries(Set<String> entities, List<String> addedEntities,
+                                                   Module currentModel, List<String> queries) {
+        String addPrimaryKeyQuery = "ALTER TABLE %s%nADD PRIMARY KEY (%s);%n";
+        for (String tableName : entities) {
+            if (addedEntities.contains(tableName)) {
+                continue;
+            }
+            Optional<Entity> entity = currentModel.getEntityByTableName(tableName);
+            entity.ifPresent(value ->
+                    queries.add(String.format(addPrimaryKeyQuery, tableName, value.getKeys().stream().map(
+                    EntityField::getFieldColumnName).reduce((a, b) -> a + ", " + b).orElse(""))));
         }
     }
 
-    private static void addToMapWithType(Entity entity, EntityField field, Map<String, List<FieldMetadata>> map) {
-        FieldMetadata fieldMetadata = new FieldMetadata(field.getFieldName(), field.getFieldType(),
-                field.isArrayType());
-
-        if (!map.containsKey(entity.getEntityName())) {
-            List<FieldMetadata> initialData = new ArrayList<>();
-            initialData.add(fieldMetadata);
-            map.put(entity.getEntityName(), initialData);
-        } else {
-            List<FieldMetadata> existingData = map.get(entity.getEntityName());
-            existingData.add(fieldMetadata);
-            map.put(entity.getEntityName(), existingData);
+    private static void addDropPrimaryKeyQueries(Set<String> changedPrimary, List<String> addedEntities,
+                                                 List<String> queries) {
+        if (changedPrimary.isEmpty()) {
+            return;
         }
-    }
-
-    private static void addToMapNewEntityFK(Entity entity, EntityField field, Map<String, List<FieldMetadata>> map) {
-        FieldMetadata fieldMetadata = new FieldMetadata(field.getRelation().getKeyColumns().get(0).getField(),
-                field.getRelation().getKeyColumns().get(0).getType(), field.isArrayType());
-
-        if (!map.containsKey(entity.getEntityName())) {
-            List<FieldMetadata> initialData = new ArrayList<>();
-            initialData.add(fieldMetadata);
-            map.put(entity.getEntityName(), initialData);
-        } else {
-            List<FieldMetadata> existingData = map.get(entity.getEntityName());
-            existingData.add(fieldMetadata);
-            map.put(entity.getEntityName(), existingData);
-        }
+        String dropPrimaryKeyTemplate = "ALTER TABLE %s%nDROP PRIMARY KEY;%n";
+        changedPrimary.forEach(table -> {
+            if (!addedEntities.contains(table)) {
+                queries.add(String.format(dropPrimaryKeyTemplate, table));
+            }
+        });
     }
 
     // Convert Create Table List to Query
-    private static void convertCreateTableToQuery(QueryTypes type, List<String> addedEntities, List<String> queries,
-            HashMap<String, List<FieldMetadata>> addedReadOnly, HashMap<String, List<FieldMetadata>> addedFields) {
-        String addField = "";
-        String pKField = "";
-        if (Objects.requireNonNull(type) == QueryTypes.ADD_TABLE) {
-            for (String entity : addedEntities) {
-                FieldMetadata primaryKey = addedReadOnly.get(entity).get(0);
-                String addTableTemplate = "CREATE TABLE %s (%n    %s %s PRIMARY KEY";
-
+    private static void addCreateTableQueries(List<String> addedEntities, Module currentModel,
+                                              List<String> queries) {
+        for (String tableName:addedEntities) {
+            Optional<Entity> entity = currentModel.getEntityByTableName(tableName);
+            if (entity.isPresent()) {
                 try {
-                    if (!primaryKey.isArrayType()) {
-                        pKField = SqlScriptUtils.getTypeNonArray(primaryKey.getDataType(),
-                                PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                    } else {
-                        pKField = SqlScriptUtils.getTypeArray(primaryKey.getDataType(),
-                                PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                    }
+                    queries.add(SqlScriptUtils.generateCreateTableQuery(entity.get(), new HashMap<>(),
+                            PersistToolsConstants.SupportedDataSources.MYSQL_DB) + System.lineSeparator());
                 } catch (BalException e) {
-                    errStream.println("ERROR: data type conversion failed: " + e.getMessage());
-                    return;
+                    errStream.println("ERROR: failed to generate create table query: " + e.getMessage());
                 }
-
-                StringBuilder query = new StringBuilder(
-                        String.format(addTableTemplate, entity, primaryKey.getName(), pKField));
-
-                String addFieldTemplate = ",%n    %s %s";
-
-                if (addedFields.get(entity) != null) {
-                    for (FieldMetadata field : addedFields.get(entity)) {
-                        try {
-                            if (!field.isArrayType()) {
-                                addField = SqlScriptUtils.getTypeNonArray(field.getDataType(),
-                                        PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                            } else {
-                                addField = SqlScriptUtils.getTypeArray(field.getDataType(),
-                                        PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                            }
-                        } catch (BalException e) {
-                            errStream.println("ERROR: data type conversion failed: " + e.getMessage());
-                            return;
-                        }
-
-                        query.append(String.format(addFieldTemplate, field.getName(), addField));
-                    }
-                }
-
-                query.append("\n);\n");
-                queries.add(query.toString());
             }
         }
     }
 
     // Convert list to a MySQL query
-    private static void convertListToQuery(QueryTypes type, List<String> entities, List<String> queries) {
-        if (Objects.requireNonNull(type) == QueryTypes.REMOVE_TABLE) {
-            for (String entity : entities) {
-                String removeTableTemplate = "DROP TABLE %s;%n";
-                queries.add(String.format(removeTableTemplate, entity));
+    private static void addDropTableQueries(List<String> entities, List<String> queries) {
+        for (String entity : entities) {
+            String removeTableTemplate = "DROP TABLE %s;%n";
+            queries.add(String.format(removeTableTemplate, entity));
+        }
+    }
+
+    private static void addDropColumnQueries(Map<String, List<String>> map, List<String> queries) {
+        for (Map.Entry<String, List<String>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (String field : entry.getValue()) {
+                String removeFieldTemplate = "ALTER TABLE %s%nDROP COLUMN %s;%n";
+                queries.add(String.format(removeFieldTemplate, entity, field));
             }
         }
     }
 
-    // Convert map of String lists to a MySQL query
-    private static void convertMapListToQuery(QueryTypes type, Map<String, List<String>> map, List<String> queries) {
-        switch (type) {
-            case REMOVE_FIELD:
-                for (Map.Entry<String, List<String>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    for (String field : entry.getValue()) {
-                        String removeFieldTemplate = "ALTER TABLE %s%nDROP COLUMN %s;%n";
-                        queries.add(String.format(removeFieldTemplate, entity, field));
-                    }
-                }
-                break;
-
-            case REMOVE_READONLY:
-                for (Map.Entry<String, List<String>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    String removeReadOnlyTemplate = "ALTER TABLE %s%nDROP PRIMARY KEY;%n";
-                    queries.add(String.format(removeReadOnlyTemplate, entity));
-                }
-                break;
-
-            case REMOVE_FOREIGN_KEY:
-                for (Map.Entry<String, List<String>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    for (String field : entry.getValue()) {
-                        String[] fieldData = field.split(",");
-                        String foreignKeyName = fieldData[0];
-                        String removeForeignKeyTemplate = "ALTER TABLE %s%nDROP FOREIGN KEY %s;%n";
-                        queries.add(String.format(removeForeignKeyTemplate, entity, foreignKeyName));
-                    }
-                }
-                break;
-
-            default:
-                break;
+    private static void addDropForeignKeyQueries(Map<String, List<ForeignKey>> map, List<String> queries) {
+        for (Map.Entry<String, List<ForeignKey>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (ForeignKey foreignKey : entry.getValue()) {
+                String warningComment = "-- Please verify the foreign key constraint name before executing the query"
+                        + System.lineSeparator();
+                String removeForeignKeyTemplate = warningComment + "ALTER TABLE %s%nDROP FOREIGN KEY %s;%n";
+                queries.add(String.format(removeForeignKeyTemplate, entity, foreignKey.name()));
+                HashMap<String, List<String>> fieldMap = new HashMap<>();
+                fieldMap.put(entity, foreignKey.columnNames());
+                addDropColumnQueries(fieldMap, queries);
+            }
         }
     }
 
     // Convert map of FieldMetadata lists to a MySQL query
-    private static void convertMapToQuery(QueryTypes type, Map<String, List<FieldMetadata>> map, List<String> queries,
-            List<String> addedEntities) {
-        switch (type) {
-            case ADD_FIELD:
-                for (Map.Entry<String, List<FieldMetadata>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    if (!addedEntities.contains(entity)) {
-                        for (FieldMetadata field : entry.getValue()) {
-                            String fieldName = field.getName();
-                            String fieldType = "";
-                            try {
-                                if (!field.isArrayType()) {
-                                    fieldType = SqlScriptUtils.getTypeNonArray(field.getDataType(),
-                                            PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                                } else {
-                                    fieldType = SqlScriptUtils.getTypeArray(field.getDataType(),
-                                            PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                                }
-                            } catch (BalException e) {
-                                errStream.println("ERROR: data type conversion failed: " + e.getMessage());
-                                return;
-                            }
-                            String addFieldTemplate = "ALTER TABLE %s%nADD COLUMN %s %s;%n";
-
-                            queries.add(String.format(addFieldTemplate, entity, fieldName, fieldType));
-                        }
-                    }
+    private static void addModifyColumnTypeQueries(Map<String, List<EntityField>> map, List<String> queries) {
+        for (Map.Entry<String, List<EntityField>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (EntityField field : entry.getValue()) {
+                String fieldName = field.getFieldColumnName();
+                String fieldType;
+                try {
+                    fieldType = SqlScriptUtils.getSqlType(field,
+                            PersistToolsConstants.SupportedDataSources.MYSQL_DB);
+                } catch (BalException e) {
+                    errStream.println("ERROR: data type conversion failed: " + e.getMessage());
+                    return;
                 }
-                break;
+                String changeTypeTemplate = "ALTER TABLE %s%nMODIFY COLUMN %s %s%s%s;%n";
 
-            case CHANGE_TYPE:
-                for (Map.Entry<String, List<FieldMetadata>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    for (FieldMetadata field : entry.getValue()) {
-                        String fieldName = field.getName();
-                        String fieldType = "";
-                        try {
-                            if (!field.isArrayType()) {
-                                fieldType = SqlScriptUtils.getTypeNonArray(field.getDataType(),
-                                        PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                            } else {
-                                fieldType = SqlScriptUtils.getTypeArray(field.getDataType(),
-                                        PersistToolsConstants.SupportedDataSources.MYSQL_DB);
-                            }
-                        } catch (BalException e) {
-                            errStream.println("ERROR: data type conversion failed: " + e.getMessage());
-                            return;
-                        }
-                        String changeTypeTemplate = "ALTER TABLE %s%nMODIFY COLUMN %s %s;%n";
-
-                        queries.add(String.format(changeTypeTemplate, entity, fieldName, fieldType));
-                    }
-                }
-                break;
-
-            case ADD_READONLY:
-                for (Map.Entry<String, List<FieldMetadata>> entry : map.entrySet()) {
-                    String entity = entry.getKey();
-                    if (!addedEntities.contains(entity)) {
-                        for (FieldMetadata field : entry.getValue()) {
-                            String primaryKey = field.getName();
-                            String addReadOnlyTemplate = "ALTER TABLE %s%nADD PRIMARY KEY (%s);%n";
-
-                            queries.add(String.format(addReadOnlyTemplate, entity, primaryKey));
-                        }
-                    }
-                }
-                break;
-
-            default:
-                break;
-        }
-    }
-
-    // Convert map of ForeignKey lists to a MySQL query
-    private static void convertFKMapToQuery(QueryTypes type, Map<String, List<ForeignKey>> map, List<String> queries) {
-        if (Objects.requireNonNull(type) == QueryTypes.ADD_FOREIGN_KEY) {
-            for (Map.Entry<String, List<ForeignKey>> entry : map.entrySet()) {
-                String entity = entry.getKey();
-                for (ForeignKey foreignKey : entry.getValue()) {
-
-                    String foreignKeyName = foreignKey.getName();
-                    String childColumnName = foreignKey.getColumnName();
-                    String referenceTableName = foreignKey.getReferenceTable();
-                    String referenceColumnName = foreignKey.getReferenceColumn();
-                    String addFKTemplate = "ALTER TABLE %s%nADD CONSTRAINT %s FOREIGN KEY (%s) REFERENCES %s(%s);%n";
-
-                    queries.add(String.format(addFKTemplate, entity, foreignKeyName, childColumnName,
-                            referenceTableName, referenceColumnName));
-                }
+                queries.add(String.format(changeTypeTemplate, entity, fieldName, fieldType,
+                        field.isOptionalType() ? "" : " NOT NULL",
+                        field.isDbGenerated() ? " AUTO_INCREMENT" : ""));
             }
         }
     }
 
-    // Types of MySQL queries
-    private enum QueryTypes {
-        ADD_TABLE,
-        REMOVE_TABLE,
-        ADD_FIELD,
-        REMOVE_FIELD,
-        CHANGE_TYPE,
-        ADD_READONLY,
-        REMOVE_READONLY,
-        ADD_FOREIGN_KEY,
-        REMOVE_FOREIGN_KEY
+    private static void addCreateFieldQueries(Map<String, List<EntityField>> map, List<String> queries) {
+        for (Map.Entry<String, List<EntityField>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (EntityField field : entry.getValue()) {
+                String fieldName = field.getFieldColumnName();
+                String fieldType;
+                try {
+                    fieldType = SqlScriptUtils.getSqlType(field,
+                            PersistToolsConstants.SupportedDataSources.MYSQL_DB);
+                } catch (BalException e) {
+                    errStream.println("ERROR: data type conversion failed: " + e.getMessage());
+                            return;
+                }
+                String addFieldTemplate = "ALTER TABLE %s%nADD COLUMN %s %s%s%s;%n";
+
+                queries.add(String.format(addFieldTemplate, entity, fieldName, fieldType,
+                        field.isOptionalType() ? "" : " NOT NULL",
+                        field.isDbGenerated() ? " AUTO_INCREMENT" : ""));
+            }
+        }
+    }
+
+    // Convert map of ForeignKey lists to a MySQL query
+    private static void addCreateForeignKeyQueries(Map<String, List<ForeignKey>> map, List<String> queries) {
+        String addFKTemplate = "ALTER TABLE %s%nADD CONSTRAINT %s FOREIGN KEY (%s) REFERENCES %s(%s);%n";
+        for (Map.Entry<String, List<ForeignKey>> entry : map.entrySet()) {
+            String entity = entry.getKey();
+            for (ForeignKey foreignKey : entry.getValue()) {
+                queries.add(String.format(addFKTemplate, entity, foreignKey.name(),
+                        foreignKey.columnNames().stream().reduce((a, b) -> a + ", " + b).orElse(""),
+                        foreignKey.referenceTable(),
+                        foreignKey.referenceColumns().stream().reduce((a, b) -> a + ", " + b).orElse("")));
+            }
+        }
     }
 
     @Override
